<resources>
    <string name="app_name">Document</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="login">登录</string>

    <string name="sure">确认</string>
    <string name="cancel">取消</string>

    <string name="menu_doc">资料</string>
    <string name="menu_offer">悬赏</string>
    <string name="menu_my_doc">我的资料</string>
    <string name="menu_my_offer">我的悬赏</string>
    <string name="menu_download">已下载</string>
    <string name="menu_trans">传输列表</string>

    <string name="upload">上传</string>
    <string name="add_file">添加文件</string>

    <string name="title">标题</string>
    <string name="content">内容</string>

    <string name="send">发送</string>
    <string name="no_res">无结果，试试其他关键字　或者　换学校试试 或者　直接搜资料码 或者　你自己想办法</string>
    <string name="search">搜索资料</string>

    <string name="download">下载</string>

    <string name="settings">设置</string>
    <string name="head_img">头像</string>
    <string name="nick_name">昵称</string>
    <string name="school">学校</string>
    <string name="college">专业</string>
    <string name="bound_mobile">绑定手机号</string>
    <string name="un_bound_mobile">解绑手机号</string>
    <string name="mobile_login">手机号登陆</string>

    <string name="upload_headimg_success">上传头像成功</string>
    <string name="upload_headimg_fail">上传头像失败</string>
    <string name="upload_name_success">上传昵称成功</string>
    <string name="upload_name_fail">上传昵称失败</string>
    <string name="bound_mobile_success">绑定手机号成功</string>
    <string name="bound_mobile_fail">绑定手机号失败</string>

    <string name="send_auth">发送验证码</string>
    <string name="auth_sure">提交验证码</string>
    <string name="input_mobile">请输入手机号</string>
    <string name="input_auth">请输入验证码</string>
    <string name="no_mobile">请输入正确的手机号</string>
    <string name="no_auth">请输入正确的验证码</string>
    <string name="auth_sended">验证码已发送</string>
    <string name="auth_success">验证成功</string>
    <string name="auth_fail">验证失败</string>
</resources>
