<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/toolbar_white"
        android:background="@color/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:hint="@string/input_mobile"
            android:inputType="phone"/>

        <Button
            android:id="@+id/button_send_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/send_auth"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_auth"
            android:inputType="number"/>

    </RelativeLayout>

    <Button
        android:id="@+id/button_auth_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_sure"/>

</LinearLayout>
