<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/toolbar_white"
        android:background="@color/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="@dimen/setting_padding">

        <RelativeLayout
            android:id="@+id/layout_head"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/head_img"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_head"
                android:layout_width="@dimen/circle_img_small"
                android:layout_height="@dimen/circle_img_small"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/nick_name"/>

            <TextView
                android:id="@+id/text_name"
                android:gravity="center_vertical"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/toleft"
            android:layout_marginBottom="@dimen/toleft"
            android:background="@color/splitLine"/>

        <RelativeLayout
            android:id="@+id/layout_school"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/school"/>

            <TextView
                android:id="@+id/text_school"
                android:gravity="center_vertical"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_college"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/college"/>

            <TextView
                android:id="@+id/text_college"
                android:gravity="center_vertical"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/toleft"
            android:layout_marginBottom="@dimen/toleft"
            android:background="@color/splitLine"/>

        <RelativeLayout
            android:id="@+id/layout_bound"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height">

            <TextView
                android:id="@+id/text_mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/bound_mobile"/>

            <TextView
                android:id="@+id/text_mobile"
                android:gravity="center_vertical"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_item_height"
            android:gravity="center_vertical"
            android:text="@string/mobile_login"/>

    </LinearLayout>

</LinearLayout>
